# OpenDashboardBackend

./: .gitmodules  CMakeLists.txt  README.md
apps/open_dashboard_backend/: CMakeLists.txt  backend.cc  backend.h  frontend_config.cc  main.cc
apps/open_dashboard_control_panel/: CMakeLists.txt  main.cc
apps/open_dashboard_harddisk_player/: CMakeLists.txt  main.cc
cmake/: google_maps_key_template_engine.cmake  win_deploy_qt.cmake
doc/: rpi_guide.md  windows_guide.md
libs/open_dashboard_backend/: CMakeLists.txt  backend.cc  backend.h  cli_arguments.cc  cli_arguments.h  data_models.h  frontend_config.cc  frontend_config.h
libs/open_dashboard_backend/resources/: application.qrc  backend_resources.qrc
libs/open_dashboard_backend/resources/html/: map.html  map.html_template
libs/open_dashboard_backend/resources/qml/: Application.qml  FrontendLoader.qml  FullscreenButton.qml  LogoStartscreen.qml  MapView.qml  Sidebar.qml  SquareButton.qml  Topbar.qml
libs/open_dashboard_backend/resources/qml/ControlBars/: BottomBar.qml  ControlBar.qml  ControlBarBottom.qml  ControlBarLeft.qml  ControlBarRight.qml  ControlBarTop.qml  LeftSideBar.qml  RightSideBar.qml  TopBar.qml
libs/open_dashboard_backend/resources/qml/ControlBars/BottomBarItems/: LogItem.qml
libs/open_dashboard_backend/resources/qml/ControlBars/ControlBarLeftItems/: FpsItem.qml
libs/open_dashboard_backend/resources/qml/ControlBars/ControlBarRightItems/: MapView.qml  VideoChannel.qml
libs/open_dashboard_backend/resources/qml/ControlBars/ControlBarTopItems/: ControlBarSelector.qml  SquareButton.qml
libs/open_dashboard_backend/resources/qml/ControlBars/RightSideBarItems/: MapView.qml
libs/open_dashboard_backend/resources/qml/SettingsWindow/: ApiKeyItem.qml  ColorChooserItem.qml  EmbeddedWindow.qml  SettingsWindow.qml
libs/open_dashboard_common/: CMakeLists.txt  config.cc  config.h  csv_reader.cc  csv_reader.h  harddisk_player.cc  harddisk_player.h  helper.cc  helper.h  package_manager.cc  package_manager.h  packet.cc  packet.h  udp_transceiver.cc  udp_transceiver.h  xml_reader.cc  xml_reader.h
libs/open_dashboard_common_ui/: CMakeLists.txt  connection_manager.cc  connection_manager.h  helper.cc  helper.h  map_generator.cc  map_generator.h
libs/open_dashboard_common_ui/resources/: common_ui_resources.qrc
libs/open_dashboard_common_ui/resources/html/: map.html_template  style.css
libs/open_dashboard_common_ui/resources/html/js/: backend_connection.js  google_maps.js
libs/open_dashboard_control_panel/: CMakeLists.txt  control_panel.cc  control_panel.h  harddisk_player_controller.cc  harddisk_player_controller.h
libs/open_dashboard_control_panel/resources/: control_panel_resources.qrc
libs/open_dashboard_control_panel/resources/qml/: ControlPanel.qml
libs/open_dashboard_control_panel/resources/qml/items/: AccelerationItem.qml  BackgroundImage.qml  ContentItem.qml  CustomDrawer.qml  CustomDrawerElement.qml  CustomSlider.qml  FooterItem.qml  HeaderItem.qml  HorizontallyScrollableTextEdit.qml  LogItem.qml  NavigationItem.qml  PedalProgressBar.qml  PedalsItem.qml  SteeringWheelItem.qml
libs/open_dashboard_control_panel/resources/qml/views/: ConnectionView.qml  HarddiskPlayerView.qml  QuantitiesView.qml
libs/open_dashboard_control_panel/resources/qml/views/HarddiskPlayerItems/: FileLoader.qml  PlayerControl.qml  PlayerSlider.qml  RecordDetails.qml  VideoItem.qml
libs/open_dashboard_data_models/: CMakeLists.txt  data_models.cc  data_models.h  helper.h
scripts/: build_vcpkg_dependencies.bat  google_maps_key_template_engine.py
unit_test/: CMakeLists.txt  config_test.cc  csv_reader_test.cc  helper_test.cc  main.cc  map_generator_test.cc  packet_test.cc
